# PadelAppSpecDriven

./: .dockerignore  .gitignore  AGENTS.md  README.md  calenderplan.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  errors.py
backend/app/db/: connection.py  migrate.py
backend/app/domain/: auth.py  enums.py  models.py  scheduling.py  scoring.py
backend/app/repositories/: base.py  event_teams_repo.py  events_repo.py  matches_repo.py  ocr_corrections_repo.py  player_stats_repo.py  players_repo.py  rankings_repo.py  rounds_repo.py  substitutions_repo.py  users_repo.py
backend/app/scripts/: seed_admin.py
backend/app/services/: americano_service.py  auth_service.py  beat_the_box_service.py  event_lifecycle.py  event_service.py  mexicano_service.py  name_format.py  ocr_correction_service.py  player_service.py  player_stats_service.py  ranked_box_service.py  result_service.py  round_service.py  round_view_service.py  summary_ordering.py  summary_service.py  team_mexicano_service.py  winners_court_service.py
backend/tests/: conftest.py  test_event_response_duration.py  test_events_date_range_filter.py  test_player_delete.py  test_player_email.py  test_player_update.py
backend/tests/contract/: test_americano_event_api.py  test_auth_api.py  test_completed_summary_compatibility.py  test_dual_create_actions_api.py  test_edit_event_flow_api.py  test_event_finish_api.py  test_events_api.py  test_events_lifecycle_api.py  test_ocr_corrections_api.py  (+13 more)
(+694 files in other folders)
