[project]
name = "padel-host-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "duckdb>=1.1.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.12.0",
  "mypy>=1.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
